# libredfish2

./: .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
src/: async.rs  blocking.rs  common.rs  lib.rs  manager.rs  power.rs  storage.rs  thermal.rs
