[package]
name = "libredfish2"
description = "A continuation of libredfish, a library to interface with a Redfish endpoint."
authors = ["Nathanael G. Reese <nathanaelreese@acm.org>"]
repository = "https://gitlab.com/ngreese/libredfish2"
documentation = "https://docs.rs/libredfish2"
keywords = ["redfish", "http", "LOM"]
categories = ["hardware-support"]
license = "MIT"
version = "0.1.2"
edition = "2024"

[build-dependencies]
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde_json = "1.0.145"

[dependencies]
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
