[package]
name = "libredfish2"
description = "A continuation of libredfish, a library to interface with Redfish endpoints."
authors = ["Nathanael G. Reese <nathanaelreese@acm.org>"]
repository = "https://gitlab.com/ngreese/libredfish2"
documentation = "https://docs.rs/libredfish2"
keywords = ["redfish", "http", "LOM"]
categories = ["hardware-support"]
license = "MIT"
version = "0.3.0"
edition = "2024"

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]
async = []

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
